# qbot

./: .gitignore
qbot_controller/: CMakeLists.txt  package.xml
qbot_controller/config/: Dockerfile  docker-compose.yaml  joystick.yaml
qbot_controller/include/qbot_controller/: mpu6050_node.hpp  serial_bridge_node.hpp
qbot_controller/launch/: joystick_teleop.launch.py
qbot_controller/src/: mpu6050_node.cpp  serial_bridge_node.cpp
qbot_description/: package.xml
qbot_description/config/: qbot.rviz  qbotProperties.yaml
qbot_description/meshes/: qbot_base.stl
qbot_description/urdf/: common_properties.xacro  qbot.urdf  qbot_description.xacro  qbot_gazebo.xacro  qbot_properties.xacro  qbot_sensors.xacro
qbot_nav/: CMakeLists.txt  package.xml
qbot_nav/config/: nav2_params.yaml
qbot_nav/launch/: navigation.launch.py
qbot_nav/rviz/: nav2.rviz
qbot_simulator/: CMakeLists.txt  package.xml
qbot_simulator/config/: gazebo_bridge.yaml
qbot_simulator/include/qbot_simulator/: camera_patcher_node.hpp  sensor_frame_fix.hpp
qbot_simulator/launch/: qbot_simulator.launch.py  tb3_launch.py
qbot_simulator/src/: camera_patcher_node.cpp  sensor_frame_fix.cpp
qbot_simulator/webots/controllers/diff_drive_controller/: diff_drive_controller.py
qbot_simulator/webots/protos/: Qbot.proto
qbot_simulator/webots/worlds/: .botverse.wbproj  botverse.wbt
qbot_simulator/worlds/: turtlebot3_world.world  warehouse.sdf
qbot_slam/: CMakeLists.txt  package.xml
qbot_slam/config/: rtabmap.yaml  slam_config.yaml  slam_toolbox.yaml
qbot_slam/launch/: slam.launch.py  visualize_map.launch.py
qbot_slam/rviz/: slam.rviz  slam_2d.rviz  slam_3d.rviz
src/qbot_description/: CMakeLists.txt
src/qbot_description/config/: qbotParams.yaml  qbotProperties.yaml
src/qbot_description/launch/: display.launch.py  display.launch.xml  qbot_description.launch.py
src/qbot_description/meshes/: qbot_base.stl
src/qbot_description/urdf/: common_properties.xacro  out.urdf  qbot_description.xacro  qbot_gazebo.xacro  qbot_properties.xacro
src/qbot_simulator/: package.xml
src/qbot_simulator/config/: gazebo_bridge.yaml
src/qbot_simulator/launch/: qbot_simulator.launch.py
